Updated JS and CSS
Changed formatting in home page and added upcoming movies
Styled Contact Us and About Us
Updated the reviews so that the movie panel box's width is relatively consistent and the movie panel auto scrolls now
Updated the movie reviews to have the characters as a side panel and fixed the comment area to be under local storage

--- a/Movie Review/home.html
+++ b/Movie Review/home.html
@@ -18,11 +18,17 @@
 		<a href="contact_us.html">Contact Us</a>
 	</nav>
 	<main>
-		<section>
+		<section class="upcoming">
 			<h1>Upcoming Movie Releases</h1>
-			<p>Whatever we want here</p>
+			<ul>
+				<li><a href="https://myanimelist.net/anime/48585/Black_Clover__Mahou_Tei_no_Ken" target="_blank">Black Clover: Sword of the Wizard King</a></li>
+				<li><a href="https://myanimelist.net/anime/52742/Haikyuu_Final" target="_blank">Haikyuu!! Final</a></li>
+				<li><a href="https://myanimelist.net/anime/53129/Seishun_Buta_Yarou_wa_Odekake_Sister_no_Yume_wo_Minai" target="_blank">Rascal Does Not Dream of a Sister Venturing Out</a></li>
+				<li><a href="https://myanimelist.net/anime/48820/Mahou_Shoujo_Madoka%E2%98%85Magica_Movie_4__Walpurgis_no_Kaiten" target="_blank">Puella Magi Madoka Magica the Movie - Walpurgisnacht: Rising</a></li>
+				<li><a href="https://myanimelist.net/anime/49303/Alice_to_Therese_no_Maboroshi_Koujou" target="_blank">Alice and Therese's Illusion Factory</a></li>
+			</ul>
 		</section>
-		<section>
+		<section class="watch">
 			<h1>Where to Watch?</h1>
 			<ul>
 				<li><a href="https://www.hulu.com/hub/anime-movies" target="_blank">Hulu</a></li>
@@ -31,12 +37,11 @@
 				<li><a href="https://www.funimationfilms.com/" target="_blank">Funimation</a></li>
 			</ul>
 		</section>
+		
 		<div class="gif">
-		</section>
-		<section id="gif1">
-			<h1></h1>
-			<p><img src="images/demon_slayer.gif" alt="animated gif"></p>
-		</section>
+			<section id="gif1">
+				<p><img src="images/demon_slayer.gif" alt="animated gif"></p>
+			</section>
 		</div>
 		
 	</main>
