--- a/Movie Review/movie_reviews/princess_mononoke.html
+++ b/Movie Review/movie_reviews/princess_mononoke.html
@@ -3,7 +3,7 @@
 <head>
     <script src="../js/princess_mononoke.js"></script>
     <link rel="stylesheet" href="../css/movies.css">
-    <link rel="stylesheet" href="css/cursor.css">
+    <link rel="stylesheet" href="../css/cursor.css">
     <title>Princess Mononoke</title>
 </head>
 <body>
@@ -62,10 +62,11 @@
             <textarea id="comment" name="comment"></textarea><br>
             <button type="submit">Submit</button>
         </form>
-
-        <div class="user-comments">
-          <!-- comments will get dynamically added here from js -->
-        </div>
+    </div>
+    <div class="user-comments">
+        <section class="comment">
+            <!-- comments will get dynamically addded here from js -->
+        </section>
     </div>
 
     <footer>
