--- a/Movie Review/reviews.html
+++ b/Movie Review/reviews.html
@@ -18,6 +18,7 @@
 		<a href="about_us.html">About Us</a>
 		<a href="contact_us.html">Contact Us</a>
 	</nav>
+
 	<div class="panel">
 
 		<div class="controls">
@@ -116,10 +117,7 @@
 				
 			</section>
 		</div>
-
-    <footer>
-        <p>&copy; 2023 Anime Movie Reviews</p>
-    </footer>
+	</div>
 
 </body>
 </html>
