--- a/Movie Review/movie_reviews/the_disappearance_of_haruhi_suzumiya.html
+++ b/Movie Review/movie_reviews/the_disappearance_of_haruhi_suzumiya.html
@@ -62,10 +62,11 @@
             <textarea id="comment" name="comment"></textarea><br>
             <button type="submit">Submit</button>
         </form>
-
-        <div class="user-comments">
-          <!-- comments will get dynamically addded here from js -->
-        </div>
+    </div>
+    <div class="user-comments">
+        <section class="comment">
+            <!-- comments will get dynamically addded here from js -->
+        </section>
     </div>
 
     <footer>
