--- a/Movie Review/movie_reviews/violet_evergarden.html
+++ b/Movie Review/movie_reviews/violet_evergarden.html
@@ -4,7 +4,7 @@
 <head>
     <script src="../js/violet_evergarden.js"></script>
     <link rel="stylesheet" href="../css/movies.css">
-    <link rel="stylesheet" href="css/cursor.css">
+    <link rel="stylesheet" href="../css/cursor.css">
     <title>Violet Evergarden: The Movie</title>
 </head>
 <body>
@@ -63,10 +63,11 @@
             <textarea id="comment" name="comment"></textarea><br>
             <button type="submit">Submit</button>
         </form>
-
-        <div class="user-comments">
-          <!-- comments will get dynamically addded here from js -->
-        </div>
+    </div>
+    <div class="user-comments">
+        <section class="comment">
+            <!-- comments will get dynamically addded here from js -->
+        </section>
     </div>
     
     <footer>
